// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadReferral Component should match snapshot 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-2"
  >
    <div
      type="style-3"
    >
      Typography Component
    </div>
    <div
      class="MuiBox-root MuiBox-root-3"
    >
      <div
        aria-live="polite"
      >
        <div
          id="helptext-upload-referral-rule"
          type="style-6"
        >
          Typography Component
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-4"
    >
      <div
        class="MuiBox-root MuiBox-root-8 FilePicker-wrapper-5 FilePicker-wrapper-7"
      >
        <input
          aria-describedby="helptext-upload-referral-rule"
          class="FilePicker-inputFile-6"
          data-testid="input-upload-referral"
          title=""
          type="file"
        />
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiBox-root MuiBox-root-9 MuiButton-outlinedSecondary"
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Upload a referral letter
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-51"
    >
      <div
        class="MuiBox-root MuiBox-root-52"
      />
    </div>
    <div
      class="MuiBox-root MuiBox-root-53"
    >
      <div
        type="style-6"
      >
        Typography Component
      </div>
    </div>
  </div>
</div>
`;

exports[`UploadReferral Component should render the referral field when referral is required 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-65"
  >
    <div
      type="style-3"
    >
      Typography Component
    </div>
    <div
      class="MuiBox-root MuiBox-root-66"
    >
      <div
        aria-live="polite"
      >
        <div
          id="helptext-upload-referral-rule"
          type="style-6"
        >
          Typography Component
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-67"
    >
      <div
        class="MuiBox-root MuiBox-root-71 FilePicker-wrapper-68 FilePicker-wrapper-70"
      >
        <input
          aria-describedby="helptext-upload-referral-rule"
          class="FilePicker-inputFile-69"
          data-testid="input-upload-referral"
          title=""
          type="file"
        />
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiBox-root MuiBox-root-72 MuiButton-outlinedSecondary"
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Upload a referral letter
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-114"
    >
      <div
        class="MuiBox-root MuiBox-root-115"
      />
    </div>
    <div
      class="MuiBox-root MuiBox-root-116"
    >
      <div
        type="style-6"
      >
        Typography Component
      </div>
    </div>
  </div>
</div>
`;
